[package]
name = "ucitap"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
shakmaty = "0.30"
zstd = "0.13.3"
anyhow = "1.0.100"

[[bin]]
name = "ucitap"
path = "src/ucitap.rs"

[[bin]]
name = "ucitap2json"
path = "src/ucitap2json.rs"
